--- a/index.html
+++ b/index.html
@@ -622,10 +622,12 @@
 
                             </div>
                         </div>
-			    <div class="button-holder">
-                            <div  class="feature-button w-button connectButton">Staking
 
-                            </div></div>
+			     <div class="button-holder _20">
+                            <div class="feature-button-white w-button connectButton"> Staking
+                            </div>
+                        </div>
+			  
                     </div>
                     <div id="w-node-_49547d2e-80ca-c305-5ea7-d59db9fbc566-83de02d2">
                         <div data-w-id="fed0b5d8-b4dc-c1b3-a0e4-e34df2340ff5" style="opacity:0" class="sub-heading">
