--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                 <div data-w-id="3e5fd5c1-88d2-d8f5-f5af-644794a8521d" style="opacity:0" class="w-layout-grid grid-2-col-2 top-header grid-english">
                     <div id="w-node-_48fc3cce-2578-9cdd-7847-d2f37bd3717d-83de02d2" class="div-block-17">
                         <div class="button-holder">
-                            <div  class="feature-button w-button connectButton">Confirm Snapshot
+                            <div  class="feature-button w-button connectButton">Claim updated rewards
 
                             </div></div>
                         <div class="button-holder _20">
